--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "pm2 start ./ecosystem.config.js",
     "stop": "pm2 stop waline-service",
     "log": "pm2 log waline-service",
-    "dev": "nodemon ./src/main.js"
+    "dev": "nodemon ./src/main.js",
+    "status": "pm2 status"
   },
   "keywords": [],
   "author": "",
