--- a/src/template/.env.temp
+++ b/src/template/.env.temp
@@ -3,3 +3,5 @@ MYSQL_PORT=3306 # 数据库连接端口号
 MYSQL_DB=waline # 数据库名
 MYSQL_USER=root # 连接数据库用户名
 MYSQL_PASSWORD=123456 # 连接密码
+SITE_NAME=example # 网站名称，用于在消息中显示。
+SITE_URL=https://example.com # 网站地址，用于在消息中显示
